--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
         }
 
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; font-family: 'Segoe UI', Roboto, sans-serif; }
-        body { margin: 0; background-color: var(--bg); color: var(--text); height: 100vh; overflow: hidden; display: flex; flex-direction: column; transition: 0.3s ease; }
-
+        body { 
+    margin: 0; 
+    background-color: var(--bg); 
+    color: var(--text); 
+    min-height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto; 
+    display: flex; 
+    flex-direction: column; 
+    transition: 0.3s ease; 
+}
         /* Barra de rolagem customizada para manter a estética Neon */
         .container, .scroll-area, #prod-list-container, #cart-items { 
             overflow-y: auto !important; 
@@ -84,7 +93,14 @@
     border-radius: 8px;
 }
 
-        .container { padding: 15px; flex: 1; width: 100%; max-width: 550px; margin: 0 auto; padding-bottom: 110px; }
+        .container { 
+    padding: 18px; 
+    flex: 1; 
+    width: 100%; 
+    max-width: 1100px; 
+    margin: 0 auto; 
+    padding-bottom: 140px; 
+}
 
         .card { 
             background: var(--card); backdrop-filter: blur(20px); border-radius: 28px; 
@@ -137,6 +153,46 @@
         .cart-item-ui { display: flex; flex-direction: column; gap: 5px; padding: 10px; border-bottom: 1px solid var(--border); }
         .cart-controls { display: flex; align-items: center; gap: 15px; margin-top: 5px; }
         .qty-btn { background: var(--gold); color: #000; border: none; width: 25px; height: 25px; border-radius: 5px; font-weight: bold; cursor: pointer; }
+/* ================= RESPONSIVIDADE AVANÇADA ================= */
+
+@media (min-width: 768px) {
+
+    .container {
+        max-width: 900px;
+    }
+
+    #view-vendas .card {
+        transition: transform 0.2s ease;
+    }
+
+    #view-vendas .card:hover {
+        transform: translateY(-3px);
+    }
+
+    #cart-items {
+        max-height: 350px;
+    }
+
+    #prod-list-container {
+        max-height: 400px;
+    }
+
+}
+
+@media (min-width: 1200px) {
+
+    .container {
+        max-width: 1200px;
+    }
+
+    nav {
+        max-width: 1200px;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 18px 18px 0 0;
+    }
+
+}
     </style>
 </head>
 <body class="dark">
